# wolfbot

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  .travis.yml  README.md  TODO.txt  algorithms.py  conftest.py  const.py  generate.py  main.py  multisolutionlarge.txt  mypy.ini  one_night.py  plot.py  possible.py  posterstats.txt  predictions.py  primary.txt  profile.py  profiler.py  pyproject.toml  replay.py  requirements-dev.txt  requirements.txt  roles.py  ruff.toml  setup.cfg  setup.py  solver_comparison.txt  statements.py  statistics.py  test.pkl  test.py  test1.txt  train.py  wolf.py  wolf_accuracy.txt
.github/workflows/: test.yml
.pyre/: pyre.stderr
data/: .pyre_configuration  possible_statements.pkl  replay.json  replay.pkl  simulation_20180602_002706.pkl  wolf_player.pkl  wolf_player_simple.pkl
data/simulations/: readme.txt
fixtures/: __init__.py  game_results.py  gameresults.py  knowledge_bases.py  predictions.py  saved_games.py  savedgames.py  solver_states.py  solverstates.py  statement.py  statement_lists.py
integration_test/: aggregate_test.py  multistatement_test.py  output_test.py  replay_test.py  standard_test.py
integration_test/results/: smart_wolf_results.json  standard_results.json
scripts/: pre-push  run-tests  run-tests.bash
src/: __init__.py  algorithms.py  bits.py  const.py  encoder.py  forward_checking.py  generate.py  gui.py  log.py  main.py  one_night.py  possible.py  predictions.py  replay.py  roles.py  solvers.py  statements.py  statistics.py  stats.py  train.py  util.py  voting.py  wolf.py
src/algorithms/: __init__.py  expectimax.py
src/learning/: __init__.py  generate.py  train.py
src/roles/: __init__.py  insomniac.py  player.py  possible.py  robber.py  seer.py  troublemaker.py  villager.py  wolf.py
src/roles/village/: __init__.py  drunk.py  hunter.py  insomniac.py  mason.py  player.py  robber.py  seer.py  troublemaker.py  villager.py
src/roles/werewolf/: __init__.py  minion.py  possible.py  tanner.py  wolf.py
src/roles/werewolf/wolf_variants/: __init__.py  center_wolf.py  easy_wolf.py  expectimax_wolf.py  possible.py  random_wolf.py  reg_wolf.py  rl_wolf.py
test/: algorithms_test.py  encoder_test.py  fixtures.py  main_test.py  predictions_test.py  replay_test.py  statements_test.py  util_test.py
tests/: conftest.py  const_test.py  encoder_test.py  file_coverage_test.py  game_utils_test.py  one_night_test.py  output_test.py  replay_test.py  solvers_test.py  statements_test.py  stats_test.py  user_test.py  util_test.py
tests/fixtures/: __init__.py  game_results.py  knowledge_bases.py  predictions.py  saved_games.py  solver_states.py  statement_lists.py
tests/integration_test/: multistatement_test.py  standard_test.py
tests/predictions/: engine_test.py  evil_test.py  normal_test.py
tests/roles/: player_test.py
tests/roles/village/: doppelganger_test.py  drunk_test.py  hunter_test.py  insomniac_test.py  mason_test.py  robber_test.py  seer_test.py  troublemaker_test.py  villager_test.py
tests/roles/werewolf/: minion_test.py  tanner_test.py  wolf_test.py
tests/solvers/: cached_test.py  relaxed_test.py  state_test.py  switching_test.py
tests/test_data/: one_night_medium.out  one_night_small.out
unit_test/: algorithms_test.py  conftest.py  const_test.py  encoder_test.py  file_coverage_test.py  fixtures.py  main_test.py  one_night_test.py  output_test.py  predictions_test.py  replay_test.py  solvers_test.py  statements_test.py  stats_test.py  util_test.py  voting_test.py
unit_test/roles/: player_test.py
unit_test/roles/village/: drunk_test.py  hunter_test.py  insomniac_test.py  mason_test.py  player_test.py  robber_test.py  seer_test.py  troublemaker_test.py  villager_test.py
unit_test/roles/werewolf/: minion_test.py  tanner_test.py  wolf_test.py
unit_test/test_data/: one_night.out  one_night_large.out  one_night_medium.out  one_night_small.out  replay.json
wolfbot/: __init__.py  const.py  encoder.py  enums.py  game_utils.py  gui.py  log.py  one_night.py  predictions.py  replay.py  solvers.py  statements.py  stats.py  user.py  util.py
wolfbot/algorithms/: __init__.py  expectimax.py
wolfbot/learning/: generate.py  train.py
wolfbot/predictions/: __init__.py  engine.py  evil.py  max_flow.py  normal.py  relaxed.py
wolfbot/roles/: __init__.py  player.py
wolfbot/roles/village/: __init__.py  doppelganger.py  drunk.py  hunter.py  insomniac.py  mason.py  robber.py  seer.py  troublemaker.py  villager.py
wolfbot/roles/werewolf/: __init__.py  minion.py  tanner.py  wolf.py
wolfbot/roles/werewolf/wolf_variants/: __init__.py  center_wolf.py  expectimax_wolf.py  random_wolf.py  reg_wolf.py  rl_wolf.py
wolfbot/solvers/: __init__.py  cached.py  relaxed.py  state.py  switching.py
