[metadata]
name = wolfbot
version = 0.0.1
description = One Night Ultimate Werewolf: AI Edition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/wolfbot
author = Tyler Yep
author_email = tyep10@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = src
python_requires = >=3.9

[mypy]
strict = True
ignore_missing_imports = True

[MASTER]
load-plugins = pylint_pytest

[pylint.MESSAGES CONTROL]
disable =
    missing-function-docstring,
    too-few-public-methods,
    too-many-branches,
    too-many-nested-blocks,
    too-many-return-statements,
    import-outside-toplevel,
    cyclic-import,
    logging-fstring-interpolation,
    duplicate-code,
    fixme,
    unsubscriptable-object,  # TODO: Remove when Optional is fixed in Python 3.9

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
