[metadata]
name = wolfbot
version = 0.0.1
description = One Night Ultimate Werewolf: AI Edition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/wolfbot
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = wolfbot
python_requires = >=3.11
include_package_data = True

[options.package_data]
wolfbot = py.typed

[mypy]
strict = True
show_error_codes = True
enable_error_code = ignore-without-code

[pylint.main]
evaluation = 10.0 - ((float(5 * error + warning + refactor + convention + info) / statement) * 10)

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-module-docstring,
    missing-function-docstring,
    too-few-public-methods,
    too-many-branches,
    too-many-nested-blocks,
    too-many-return-statements,
    import-outside-toplevel,
    cyclic-import,
    duplicate-code,
    fixme,
    too-many-boolean-expressions,
    unused-argument,
    use-implicit-booleaness-not-comparison  # unreliable

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
